Some comments addressed. Modified Figure1 to 2 degrees buffer zone. Figure2: modified seismicity.sh, updated historical.txt and instrumental.txt

--- a/response.tex
+++ b/response.tex
@@ -50,7 +50,7 @@ Pp 4, line 106: Should this be northwest?
 }
 
 \response{%
-Response will be here.
+Fixed, Thanks.
 }
 
 \comment{4}{%
@@ -110,7 +110,7 @@ Pp 14, line 391 The incorporation of smaller earthquakes $(M<5)$ will have a sig
 }
 
 \response{%
-Response will be here.
+Thanks for the comment. We computed hazard for events $M_w > 4.5$ and modified the text. 
 }
 
 \comment{10}{%
@@ -118,7 +118,7 @@ Figure 7: Is the magnitude-frequency distribution just a truncated (Mmin, Mmax) 
 }
 
 \response{%
-Response will be here.
+Yes it is truncated GR model. (Figure caption is not fixed yet.)
 }
 
 \comment{11}{%
@@ -134,7 +134,7 @@ Pp 13, line 361: Change "approached" to "approach" and "lead" to "led."
 }
 
 \response{%
-Response will be here.
+Done.
 }
 
 \comment{13}{%
@@ -176,7 +176,7 @@ The authors present uncertainty in their hazard estimate but do not include a mo
 While I think that the regional and uniform models are generally correct within 1.5 degrees of the border, I think that outside of this region, they may be moderately underestimating hazard by not considering sources with 200 km of their region of interest. Their buffer zone for sources is presently 50 km.
 }
 
-\response{Response will be here.}
+\response{That right. We increased the buffer zone up to 2 degrees. (Haven't modified the text)}
 
 \comment{3}{%
 It would be good if the abstract is more specific about the results. Where is the hazard greatest? What sources contribute to regions of higher hazard?
@@ -189,14 +189,14 @@ In the second paragraph of the introduction, I would include a reference to a fi
 \response{Response will be here.}
 
 \comment{5}{%
-line 39:   eighth        -> eight
+line 39:   eight        -> eighth
 }
-\response{Response will be here.}
+\response{Fixed.}
 
 \comment{6}{%
 line 55   focuses in -> focuses on
 }
-\response{Response will be here.}
+\response{Done. Thanks.}
 
 \comment{7}{%
 line 56 -> Please be more specific about how your analysis differs from previous analyses.
@@ -216,17 +216,17 @@ line 71 -> Include reference? Include reference.
 \comment{10}{%
 line 78 -> reduce -> acknowledge
 }
-\response{Response will be here.}
+\response{Fixed.}
 
 \comment{11}{%
 line 99 -> Is 0.5 degrees enough? To what distance do you do your ground motion calculations? In the western United States, they are done to 200 km. In the central and eastern, they are done to 1000 km. Depending on this value, you should include sources up to this distance from your region of interest.
 }
-\response{Response will be here.}
+\response{We reanalyze the hazard with 2 degrees buffer zone. (Not modified in the text.)}
 
 \comment{12}{%
 line106 -> northeast -> northwest
 }
-\response{Response will be here.}
+\response{Done. Thanks}
 
 \comment{13}{%
 line 114 -> There is no previous mention of this earthquake. I am not sure to which earthquake you are referring. Should either the 1721 or 1780 earthquakes be the Shebli earthquake?
@@ -236,7 +236,7 @@ line 114 -> There is no previous mention of this earthquake. I am not sure to wh
 \comment{14}{%
 line 180 -> The smaller events should also help to inform the G-R relationship.
 }
-\response{Response will be here.}
+\response{Thanks for the comment. Added to the text.}
 
 \comment{15}{%
 line 182 -> How come this study doesn't appear in Table 3. Do they not calculate PGA for 2 and 10\% exceedance in 50 years?
@@ -259,9 +259,9 @@ line 232 -> It is unclear how you chose Mc. In some cases, it looks like you cho
 \response{Response will be here.}
 
 \comment{19}{%
-line 267 -> add ?and?
+line 267 -> add 'and'
 }
-\response{Response will be here.}
+\response{Added. Thanks.}
 
 \comment{20}{%
 line 289 -> You might also cite the 2014 USGS National Model (Petersen et al., 2014) and the Afghanistan seismic hazard maps (Boyd et al, 2007), which include spatial variability in the smoothing parameter.
@@ -269,14 +269,14 @@ line 289 -> You might also cite the 2014 USGS National Model (Petersen et al., 2
 \response{Response will be here.}
 
 \comment{21}{%
-line 297 -> provided below ? provided in the next section
+line 297 -> provided below -> provided in the next section
 }
-\response{Response will be here.}
+\response{Fixed.}
 
 \comment{22}{%
-line 300 -> allows one to draw information ? allows to draw information 
+line 300 :  allows to draw information -> allows one to draw information 
 }
-\response{Response will be here.}
+\response{Done.}
 
 \comment{23}{%
 line 323 -> Be more specific about how HA3 computes b and Mmax. What is its method?
@@ -289,29 +289,29 @@ line 335 -> Different seismic zone will not necessarily have difference values o
 \response{Response will be here.}
 
 \comment{25}{%
-line 337 -> a means to reduce epistemic ? a means to account for epistemic 
+line 337 -> a means to reduce epistemic -> a means to account for epistemic 
 }
-\response{Response will be here.}
+\response{Done.}
 
 \comment{26}{%
 line 361 -> lead -> leads
 }
-\response{Response will be here.}
+\response{Two reviewer suggested two different word. Both of them are correct. Please see.}
 
 \comment{27}{%
 line 364 -> How do you address the epistemic uncertainty generally introduced by using a suite of GMPEs?
 }
-\response{Response will be here.}
+\response{As mentioned in Atkinson and Adam (2013) and Atkinson et al (2014), using different GMPEs with different logic tree weights from different literature is not necessarily the best way to model the epistemic uncertainty in GMPEs. We prefer to use the alternative GMPEs and applicable data to guide the choice of a representative or ?central? GMPE, and to define representative (upper and lower) GMPEs that express uncertainty about the central GMPE. In the previeous study (Khodaverdian 2016), they used Akkar and Bommer (2010) and Ghasemi et al (2009) along side other equations. Akkar and Bommer (2010) derived the equation up to 100 Km, which they used for 200 km. Also Ghasemi et al (2009) is presented the coefficients for spectral acceleration not PGA. Of course this alternative method has been a hotly-debated topic, and there is no clear consensus about that, however, the plots of attenuation relationships in different magnitude illustrate the fact that with this approach we can address the epistemic uncertainty in an acceptable range. We totally agree with the reviewer?s comment that presenting the seismic hazard with upper and lower values (Fig 10) to address the epistemic uncertainty could be misleading for the readers. In order to address these concerns, we do the seismic hazard analysis for bigger domain (2 degrees buffer zone) and combine the results according to the logic tree scheme in Fig X.}
 
 \comment{28}{%
-line 365: add ?and?
+line 365: add 'and'
 }
-\response{Response will be here.}
+\response{Added. Thanks.}
 
 \comment{29}{%
 line 370 -> Could you consider other depths to help fill out your range of epistemic uncertainty?
 }
-\response{Response will be here.}
+\response{The Kalkan and Gulkan (2004) attenuation relationship is originally generated for Turkey. However, in the recent test by Zafarani and Mousavi (2014), it gives acceptable results for PGA. Since the high accuracy achieved by the current depth, and we have no idea how different depth will change the results, we prefer to not to use a parameter without knowing the effects. }
 
 \comment{30}{%
 line 371 -> How does this value compare with the models you decided not to use?
@@ -321,17 +321,17 @@ line 371 -> How does this value compare with the models you decided not to use?
 \comment{31}{%
 line 376 -> In this case, you should consider all sources with 200 km of your area of interest.
 }
-\response{Response will be here.}
+\response{We modified the buffer zone. Thanks.}
 
 \comment{32}{%
 line 394:  50-years -> 50-year
 }
-\response{Response will be here.}
+\response{Done.}
 
 \comment{33}{%
-line 420 -> with concentration ? with a concentration
+line 420 -> with concentration -> with a concentration
 }
-\response{Response will be here.}
+\response{Added. Thanks.}
 
 \comment{34}{%
 line 422 -> I would have stated this differently. It looks like the lower b-value in Kopeh Dagh yields relatively high hazard in the R model whereas in the U model, this low b-value has leaked into the entire region and subsequently elevated seismic hazard in all areas outside of Kopeh Dagh.
@@ -359,7 +359,7 @@ line 439: of city of Tabriz -> of the city of Tabriz.
 \response{Response will be here.}
 
 \comment{39}{%
-line 450 ->  for 2 and 10\%, respectively ? for 2 and 10\% in 50 years, respectively.
+line 450 ->  for 2 and 10\%, respectively -> for 2 and 10\% in 50 years, respectively.
 }
 \response{Response will be here.}
 
@@ -445,15 +445,15 @@ p34 ? figure 5 -> Which seismic zone corresponds to which color? It looks like e
 \response{Response will be here.}
 
 \comment{58}{%
-P37: 10 percent of probability -> 10 percent probability }
+P37: 10 percent of probability $\to$ 10 percent probability }
 \response{Response will be here.}
 
 \comment{59}{%
-p 39 ? figure 11 -> Include horizontal lines indicating 2 and 10\% probability of exceedance in 50 years.}
-\response{Response will be here.}
+p 39,figure 11: Include horizontal lines indicating 2 and 10\% probability of exceedance in 50 years.}
+\response{Included.}
 
 \comment{60}{%
-p 39 ? figure 11 -> p 41 ? figure 12 -> Can you include curves or points for the other studies in Table 3?}
+p 41, figure 12: Can you include curves or points for the other studies in Table 3?}
 \response{Response will be here.}
 
 
