--- a/results.tex
+++ b/results.tex
@@ -23,9 +23,9 @@
 
 \section{Results and Analysis}
 
-Using the data, parameters, and procedures just described, we considered two different hazard models based on whether we use the five distinct seismic hazard regions or the whole area of interest as a uniform seismic hazard region. We call these the R and U models, respectively. Using these models we obtained hazard curves and expected PGA values for two probabilities of exceedance, at 2 and 10 percent in 50 years for events exceeding magnitudes $M_w \geq 5$. These probabilities correspond to return periods of 475 and 2475 years. For nomenclature purposes, we use the probabilities as a suffix on the model type. As an example, we refer to the results for 2 percent probability of exceedance in 50 years using the five-regions model as the R2, whereas for the case of 10 percent probability of exceedance when using the uniform model we use the tag name U10.
+Using the data, parameters, and procedures just described, we considered two different hazard models based on whether we use the five distinct seismic hazard regions or the whole area of interest as a uniform seismic hazard region. We call these the R and U models, respectively. Using these models we obtained hazard curves and expected PGA values for two probabilities of exceedance, at 2 and 10 percent in 50 years for events exceeding magnitudes \myrevision{$M_w \geq 4.5$}. These probabilities correspond to return periods of 475 and 2475 years. For nomenclature purposes, we use the probabilities as a suffix on the model type. As an example, we refer to the results for 2 percent probability of exceedance in 50 years using the five-regions model as the R2, whereas for the case of 10 percent probability of exceedance when using the uniform model we use the tag name U10.
 
-Our choice for the threshold magnitude is based on the assumption that at the local scale (where a point of interest is close to the source), the hazard will be controlled by events $M_w \geq 5$, or conversely, based on the assumption that smaller events at increasing distances will not drive the hazard of a given site. In turn, the 2 and 10 percent probability of exceedance in a 50-years span are considered a standard practice in seismic design, and are the probabilities used in the Iranian building code \citep{BHRC2014}.
+Our choice for the threshold magnitude is based on the assumption that at the local scale (where a point of interest is close to the source), the hazard will be controlled by events \myrevision{$M_w \geq 4.5$}, or conversely, \myrevision{$M_{min}$ was chosen based on the expected smallest magnitude capable of causing damage}. In turn, the 2 and 10 percent probability of exceedance in a \myrevision{50-year} span are considered a standard practice in seismic design, and are the probabilities used in the Iranian building code \citep{BHRC2014}.
 
 In the R models, we computed the probability of exceedance of the ground motion separately for each region and then added their exceedance rates at a given level of ground motion in order to have the contribution of all regions for any given grid point within the region of interest. The results are obtained in the form of annual rate of exceedance. Expected PGA values are therefore a ``slice'' of the actual hazard curves cut across all grid points for a chosen exceedance rate.
 
@@ -33,11 +33,11 @@ Fig.~\ref{fig:pga} shows the expected mean PGA values obtained using the selecte
 
 In general, the U models exhibit higher levels of expected ground motions when compared to their corresponding R models. This is illustrated in Fig.~\ref{fig:pga.diff}, which shows the difference between both models, U--R (U minus R). In this figure, positive values indicate that the U models have larger mean PGA values than the R models. As it can be seen, this is true practically throughout the whole region at very low levels, and in particular in the north-central region at a moderate level of up to 0.2 g and more predominantly in the north-western region of Azerbaijan at levels of about 0.2 to 0.45 g.
 
-Overall, these results are consistent with the seismicity observed in Fig.~\ref{fig:catalog}. The R model results, however, seem to be more sensitive to the influence of large magnitude events observed in both the historical and modern seismicity maps, with concentration of strong earthquakes in the Alborz and Kopeh Dagh regions; whereas the U model results seem to be more sensitive to the influence of low-to-moderate magnitude events, especially in the Azerbaijan region. This is because of the higher $b$-value obtained for the Azerbaijan region in the R model as opposed to the lower value for the U model.
+Overall, these results are consistent with the seismicity observed in Fig.~\ref{fig:catalog}. The R model results, however, seem to be more sensitive to the influence of large magnitude events observed in both the historical and modern seismicity maps, with \myrevision{a} concentration of strong earthquakes in the Alborz and Kopeh Dagh regions; whereas the U model results seem to be more sensitive to the influence of low-to-moderate magnitude events, especially in the Azerbaijan region. This is because of the higher $b$-value obtained for the Azerbaijan region in the R model as opposed to the lower value for the U model.
 
 With this in mind, we make the following additional consideration. No one model (R or U) can be considered uniquely correct. Both carry a certain level of epistemic uncertainty. A means to address this is to use combinations of different models to incorporate information from all possible models. This would also be true, for instance, if in the future we were to consider other attenuation relationships. Here we also computed the expected levels of ground motion for a combination of the R and U models (with equal weights). We refer to this as the (R,U) model. The results of this combined model are shown in Fig.~\ref{fig:pga.ru.std} in the form of expected mean PGA values, along with the marginal values of plus and minus one standard deviation. Here, the standard deviation is carried forward in the calculation from the attenuation relationship and thus affects every grid point differently depending on the added contributions from each region. 
 
-As it can be seen in Fig.~\ref{fig:pga.ru.std}, the combined (R,U) model follows more closely the distribution of the region's seismicity shown in Fig.~\ref{fig:catalog} as well as the major faults shown in Fig.~\ref{fig:selected}a, and thus we consider it to be a better assessment of the seismic hazard in the region. It displays well the contribution of the North Tabriz Fault system in the Azerbaijan region as well as the contribution of the Piranshahr and Morvarid faults in the Zagros region and that of the different faults in the Alborz and Kopeh Dagh regions. In Fig.~\ref{fig:pga.ru.std}, the highest PGAs are observed in the (R,U)2+STD model results, where the expected accelerations are of the order of 1.4 g to the northwest of city of Tabriz. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects or other related conditions which may often contribute to mitigating peak accelerations.
+As it can be seen in Fig.~\ref{fig:pga.ru.std}, the combined (R,U) model follows more closely the distribution of the region's seismicity shown in Fig.~\ref{fig:catalog} as well as the major faults shown in Fig.~\ref{fig:selected}a, and thus we consider it to be a better assessment of the seismic hazard in the region. It displays well the contribution of the North Tabriz Fault system in the Azerbaijan region as well as the contribution of the Piranshahr and Morvarid faults in the Zagros region and that of the different faults in the Alborz and Kopeh Dagh regions. In Fig.~\ref{fig:pga.ru.std}, the highest PGAs are observed in the (R,U)2+STD model results, where the expected accelerations are of the order of 1.4 g to the northwest of \myrevision{the} city of Tabriz. These maximum values should, nonetheless, be interpreted with caution given the fact that predictions are based on rock-site assumptions and do not include any kind of site effects or other related conditions which may often contribute to mitigating peak accelerations.
 
 \begin{figure*}[th!]
     \centering
