--- a/introduction.tex
+++ b/introduction.tex
@@ -3,15 +3,15 @@
 
 This article presents a new seismic hazard assessment for the northern portion of the Iranian plateau, using a smoothed seismicity approach in combination with an updated seismic catalog and a ground motion prediction equation recently evaluated and found to fit well with observations of peak ground response in the region. 
 
-The Iranian plateau is located on the Himalayan-Alpine seismic belt. It is confined between the convergent movements of the Arabian and Eurasian plates, and laterally trapped between the Arabian and eastern Asia-Minor to the west, and the Indian and Eurasian plates to the east \citep{Berberian_1981_Chap}. This entrapment lifts the plateau and gives rise to the three major mountain ranges delimiting Iran's land, the Zagros mountain ranges running from the southeast to the northwest, the Alborz ranges to the north, and the east Iranian ranges. It also defines the seismic activity of the region---one with a long history of large magnitude ($M>7$) earthquakes that are well documented dating back to the eight century---which has repeatedly damaged Iran's infrastructure and taken the lives of thousands. 
+The Iranian plateau is located on the Himalayan-Alpine seismic belt. It is confined between the convergent movements of the Arabian and Eurasian plates, and laterally trapped between the Arabian and eastern Asia-Minor to the west, and the Indian and Eurasian plates to the east \citep{Berberian_1981_Chap}. This entrapment lifts the plateau and gives rise to the three major mountain ranges delimiting Iran's land, the Zagros mountain ranges running from the southeast to the northwest, the Alborz ranges to the north, and the east Iranian ranges. It also defines the seismic activity of the region---one with a long history of large magnitude ($M>7$) earthquakes that are well documented dating back to the \myrevision{eighth} century---which has repeatedly damaged Iran's infrastructure and taken the lives of thousands. 
 
 According to this tectonic setting and the geologic provinces of the plateau, Iranian earthquakes have been categorized into various seismic zones, ranging from the definition of four to nine major seismic zones in the more traditional studies \citep[e.g.,][]{Stocklin1968, Takin1972, Berberian1976}, and up to twenty to twenty-three seismotectonic provinces in the most elaborate ones \citep[e.g.,][]{Nowroozi1976, Tavakoli1999}. Contemporary, well-accepted models divide Iran into five major tectonic regions: Azerbaijan-Alborz, Kopeh-Dagh, Zagros, Central-East Iran, and Makran \citep[e.g.,][]{Mirzaei1998}. More recently, in a study aimed to develop a uniform earthquake catalog for Iran, \citet{Karimiparidari2013} further divided the Azerbaijan-Alborz region into two separate seismic zones: Azerbaijan and the Alborz Mountain Range, hereafter referred to simply as Alborz. We adopt the latter definition of six seismic zones and focus our attention on those most relevant to the northern part of the country, Azerbaijan, Alborz and Kopeh-Dagh.
 
-Over the last three decades there have been multiple efforts to better estimate the seismic parameters and hazard, and improve the assessment of seismic risk in Iran \citep[e.g.,][]{Tavakoli1999, Moinfar_2000_Chap, Ghodrati2003, Moinfar_2012_WCEE, Khodaverdian_2016_BSSA}. The most recent of these studies \citep{Khodaverdian_2016_BSSA} focuses in the estimation of spatially-variable seismic parameters for the whole country using a similar approach to the one we used here. We, however, focus our attention in the northern three seismic zones of the country assuming regionally-based and smoothed seismic parameters. Altogether, these previous studies have helped improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. Such improvements are reflected in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran. However, other indicators suggest persistent high levels of seismic risk. Therefore, more complete and accurate assessments of seismic hazard---incorporating the latest available data and alternative methods---are still necessary.
+Over the last three decades there have been multiple efforts to better estimate the seismic parameters and hazard, and improve the assessment of seismic risk in Iran \citep[e.g.,][]{Tavakoli1999, Moinfar_2000_Chap, Ghodrati2003, Moinfar_2012_WCEE, Khodaverdian_2016_BSSA}. The most recent of these studies \citep{Khodaverdian_2016_BSSA} focuses \myrevision{on} the estimation of spatially-variable seismic parameters for the whole country using a similar approach to the one we used here. We, however, focus our attention in the northern three seismic zones of the country assuming regionally-based and smoothed seismic parameters. Altogether, these previous studies have helped improve the Iranian Code of Practice for Seismic Resistant Design of Buildings \citep{BHRC2014}. Such improvements are reflected in lower overall expected damage ratios, as reported by \citet{Ghodrati2013} for the city of Tehran. However, other indicators suggest persistent high levels of seismic risk. Therefore, more complete and accurate assessments of seismic hazard---incorporating the latest available data and alternative methods---are still necessary.
 
 Northern Iran houses about 41 percent (32 million) of the total population of the country in the cities of Tehran, Mashhad, Tabriz, Karaj, Qom, Urmia, Rasht, and Ardabil. This region has suffered devastating effects of earthquakes in the past \citep[e.g.,][]{Mehrain_1990_Tech, Chafory-Ashtiany_1999_DPM, Razzaghi_2012_Tech}. Due to its importance, northern Iran has recently been the subject of various efforts to better characterize seismic hazard \citep[e.g.,][]{Abdollahzadeh2014a, Boostan2015}. Among other things, these studies have highlighted the prevailing differences between studies, the importance of quantifying uncertainties, and the need for considering all potential faults in the region---even if believed inactive---by adopting new methodologies and the latest available data.
 
-Most previous studies focus on particular locations or are based on specific categorization of seismogenic faults, which are often subjectively interpreted and limited to data availability. We use the smoothed seismicity method introduced by \citet{Frankel1995}. This approach has been used with success in other regions \citep[e.g.][]{Cao1996, Akinci2004, Kalkan2009}, including Iran \citep{Khodaverdian_2016_BSSA}. Its major feature is the treatment of cataloged instrumental and historical earthquakes as individual point sources as opposed to events that are part of a predefined system of faults in a given tectonic setting. While we recognize that probabilistic seismic hazard analysis based on fault systems can be more realistic and accurate, by choosing the smoothed seismicity method we seek to reduce the uncertainty associated with fault mapping, earthquake location and source mechanism definitions, and to cover areas that would otherwise be underestimated or ignored. In our analysis, we assume earthquake hazard in northern Iran to be dominated by the seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh, but also consider the contribution of the areas of Zagros and the central-east seismic zones to the hazard calculation within our domain of interest (see Fig.~\ref{fig:iran}). In addition to this five seismic-zone model, we obtain results for the entire region of interest as if it could be considered as a single uniform seismic zone. We used both these models and the combination of them to interpret seismic hazard in northern Iran.
+Most previous studies focus on particular locations or are based on specific categorization of seismogenic faults, which are often subjectively interpreted and limited to data availability. We use the smoothed seismicity method introduced by \citet{Frankel1995}. This approach has been used with success in other regions \citep[e.g.][]{Cao1996, Akinci2004, Kalkan2009}, including Iran \citep{Khodaverdian_2016_BSSA}. Its major feature is the treatment of cataloged instrumental and historical earthquakes as individual point sources as opposed to events that are part of a predefined system of faults in a given tectonic setting. While we recognize that probabilistic seismic hazard analysis based on fault systems can be more realistic and accurate, by choosing the smoothed seismicity method we seek to \myrevision{acknowledge} the uncertainty associated with fault mapping, earthquake location and source mechanism definitions, and to cover areas that would otherwise be underestimated or ignored. In our analysis, we assume earthquake hazard in northern Iran to be dominated by the seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh, but also consider the contribution of the areas of Zagros and the central-east seismic zones to the hazard calculation within our domain of interest (see Fig.~\ref{fig:iran}). In addition to this five seismic-zone model, we obtain results for the entire region of interest as if it could be considered as a single uniform seismic zone. We used both these models and the combination of them to interpret seismic hazard in northern Iran.
 
 In the following sections we describe our region of interest in greater detail, review its associated tectonics and seismicity, and provide additional information about the adopted approach. Significant aspects of our work include the composition of the earthquake catalog, including catalog completeness and the conversion of earthquake magnitudes, the selection of an appropriate attenuation relationship for the region, and the estimation of the Gutenberg-Richter seismicity parameters. Our analysis includes seismic hazard curves and maps for peak ground acceleration (PGA) considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions for events with moment magnitude $M_w \geq 5$. We analyze our results in light of similar estimates available in the literature and summarize the most relevant conclusions.
 
