Updated figures added to the figure 6 illustrator file. Needs more polishing.

--- a/response.tex
+++ b/response.tex
@@ -457,4 +457,18 @@ p 41, figure 12: Can you include curves or points for the other studies in Table
 \response{Response will be here.}
 
 
+\introcomment{~}{%
+Summary of modifications (Remove before submitting)\\
+- Buffer zone updated.\\
+- Data updated.\\
+- b-values updated.\\
+- Completeness parameters updated.\\
+- Figure 1: Buffer Zone Updated.\\
+- Figure 3: Seismicity.sh modified. Historical.txt and Instrumental.txt updated to new data. \\
+- Figure 4: Updated.\\
+- Figure 5: The excel file is updated. The figure needs to be updated.\\
+- Figure 6: Updated data completeness plots added to the figure. Figure needs final polishing. \\
+
+}
+
 \end{document}
