Figure 7(Annual Probability of exceedance.)  updated.

--- a/response.tex
+++ b/response.tex
@@ -468,7 +468,7 @@ Summary of modifications (Remove before submitting)\\
 - Figure 4: Updated.\\
 - Figure 5: The excel file is updated. The figure needs to be updated.\\
 - Figure 6: Updated data completeness plots added to the figure. Figure needs final polishing. \\
-
+- Figure 7: Updated. 
 }
 
 \end{document}
